# PMP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
MFCDlgWithTabctrl/: CMakeLists.txt  CalculateDlgChild1.cpp  CalculateDlgChild1.h  CalculateDlgChild2.cpp  CalculateDlgChild2.h  CalculateDlgChild3.cpp  CalculateDlgFather.cpp  CalculateDlgFather.h  ClassView.cpp  ElectricModelingDLGPiezoelectric.cpp  FileView.cpp  FileView.h  IsosurfaceDlg.cpp  IsosurfaceDlg.h  PointsColorDlg.cpp  PointsColorDlg.h  ReadMe.txt  TestMFCDlgWithTabctrl.cpp  TestMFCDlgWithTabctrl.rc  TestMFCDlgWithTabctrlDoc.cpp  TestMFCDlgWithTabctrlDoc.h  TestMFCDlgWithTabctrlView.cpp  TestMFCDlgWithTabctrlView.h  cmake_install.cmake  resource.h
MFCDlgWithTabctrlOPTMatn/: CMakeLists.txt  ChildFrm.cpp  ElectricModelingDLGChild1.cpp  ElectricModelingDLGDielectric.cpp  ElectricModelingDLGDielectric.h  ElectricModelingDLGDielectricExternal.cpp  ElectricModelingDLGDiffusivity.cpp  ElectricModelingDLGDiffusivityExternal.cpp  ElectricModelingDLGElastic.cpp  ElectricModelingDLGElasticExternal.cpp  ElectricModelingDLGElasticExternal.h  ElectricModelingDLGFather.cpp  ElectricModelingDLGMagnetic.cpp  ElectricModelingDLGMagnetic.h  ElectricModelingDLGMagneticExternal.cpp  ElectricModelingDLGMagnetoelectric.cpp  ElectricModelingDLGMagnetoelectricExternal.cpp  ElectricModelingDLGMoreDielectric.cpp  ElectricModelingDLGMoreDiffusivity.cpp  ElectricModelingDLGMoreElastic.cpp  ElectricModelingDLGMoreMagnetic.cpp  ElectricModelingDLGMoreMagnetoelectric.cpp  ElectricModelingDLGMorePiezoelectric.cpp  ElectricModelingDLGMorePiezomagnetic.cpp  ElectricModelingDLGMoreThermal.cpp  ElectricModelingDLGMoreThermal.h  ElectricModelingDLGPiezoelectric.cpp  ElectricModelingDLGPiezoelectricExternal.cpp  ElectricModelingDLGPiezoelectricExternal.h  ElectricModelingDLGPiezomagnetic.cpp  ElectricModelingDLGPiezomagnetic.h  ElectricModelingDLGPiezomagneticExternal.cpp  ElectricModelingDLGSharedData.cpp  ElectricModelingDLGSharedData.h  ElectricModelingDLGThermal.cpp  ElectricModelingDLGThermalExternal.cpp  ElectricModelingDLGThermalExternal.h  FileView.cpp  MainFrm.cpp  PropertiesWnd.cpp  (+9 more)
PMP/: CMakeLists.txt  CalculateDlgChild1.cpp  CalculateDlgChild1.h  CalculateDlgChild2.cpp  CalculateDlgChild3.cpp  CalculateDlgFather.cpp  ChildFrm.cpp  ClassView.cpp  DialogOpenwith.cpp  DialogOpenwith.h  ElectricModelingDLGChild1.cpp  ElectricModelingDLGChild1.h  ElectricModelingDLGDielectric.cpp  ElectricModelingDLGDielectricExternal.cpp  ElectricModelingDLGDiffusivity.cpp  ElectricModelingDLGDiffusivity.h  ElectricModelingDLGDiffusivityExternal.cpp  ElectricModelingDLGDiffusivityExternal.h  ElectricModelingDLGElastic.cpp  ElectricModelingDLGElastic.h  ElectricModelingDLGElasticExternal.cpp  ElectricModelingDLGElasticExternal.h  ElectricModelingDLGFather.cpp  ElectricModelingDLGFather.h  ElectricModelingDLGMagnetic.cpp  ElectricModelingDLGMagneticExternal.cpp  ElectricModelingDLGMagneticExternal.h  ElectricModelingDLGMagnetoelectric.cpp  ElectricModelingDLGMagnetoelectric.h  ElectricModelingDLGMagnetoelectricExternal.cpp  ElectricModelingDLGMoreDielectric.cpp  ElectricModelingDLGMoreDielectric.h  ElectricModelingDLGMoreDiffusivity.cpp  ElectricModelingDLGMoreDiffusivity.h  ElectricModelingDLGMoreElastic.cpp  ElectricModelingDLGMoreElastic.h  ElectricModelingDLGMoreMagnetic.cpp  ElectricModelingDLGMoreMagnetic.h  ElectricModelingDLGMoreMagnetoelectric.cpp  ElectricModelingDLGMoreMagnetoelectric.h  (+86 more)
PMPCUDABaseVTK/: CMakeLists.txt  cmake_install.cmake  volumeRender.cpp  volumeRender_kernel.cu
PMPCall/: CMakeLists.txt  ChildFrm.cpp  ClassView.cpp  FileView.cpp  MainFrm.cpp  PMPCall.cpp  PMPCall.h  PMPCall.rc  PMPCallDoc.cpp  PMPCallDoc.h  PMPCallView.cpp  PMPCallView.h  PropertiesWnd.cpp  ReadMe.txt  Resource.h  cmake_install.cmake  stdafx.cpp
PMPDemoVersion3.0/: CMakeLists.txt  CalculateDlgChild1.cpp  CalculateDlgChild1.h  CalculateDlgChild2.cpp  CalculateDlgChild2.h  CalculateDlgChild3.cpp  CalculateDlgChild3.h  CalculateDlgFather.cpp  CalculateDlgFather.h  ChildFrm.cpp  ElectricModelingDLGChild1.cpp  ElectricModelingDLGChild1.h  ElectricModelingDLGChild2.cpp  ElectricModelingDLGChild2.h  ElectricModelingDLGChild3.cpp  ElectricModelingDLGChild3.h  ElectricModelingDLGDielectric.cpp  ElectricModelingDLGDielectric.h  ElectricModelingDLGElastic.cpp  ElectricModelingDLGElastic.h  ElectricModelingDLGExternal.cpp  ElectricModelingDLGExternal.h  ElectricModelingDLGFather.cpp  ElectricModelingDLGFather.h  ElectricModelingDLGMechanical.cpp  ElectricModelingDLGMechanical.h  ElectricModelingDLGMoreDielectric.cpp  ElectricModelingDLGMoreDielectric.h  ElectricModelingDLGMoreElastic.cpp  ElectricModelingDLGMoreElastic.h  ElectricModelingDLGMorePiezoelectric.cpp  ElectricModelingDLGMorePiezoelectric.h  ElectricModelingDLGPiezoelectric.cpp  ElectricModelingDLGPiezoelectric.h  FileView.cpp  FileView.h  MainFrm.cpp  MainFrm.h  PropertiesWnd.cpp  VTKMFCCreateBMPActors.rc  (+7 more)
PMPFileViewer/: CDib.cpp  CDib.h  CMakeLists.txt  CalculateDlgChild1.cpp  CalculateDlgChild1.h  CalculateDlgChild2.cpp  CalculateDlgChild3.cpp  CalculateDlgChild3.h  CalculateDlgFather.cpp  CalculateDlgFather.h  ChildFrm.cpp  ClassView.cpp  ElectricModelingDLGChild1.cpp  ElectricModelingDLGChild1.h  ElectricModelingDLGDielectric.cpp  ElectricModelingDLGDielectric.h  ElectricModelingDLGDielectricExternal.cpp  ElectricModelingDLGDielectricExternal.h  ElectricModelingDLGDiffusivity.cpp  ElectricModelingDLGDiffusivity.h  ElectricModelingDLGDiffusivityExternal.cpp  ElectricModelingDLGDiffusivityExternal.h  ElectricModelingDLGElastic.cpp  ElectricModelingDLGElastic.h  ElectricModelingDLGElasticExternal.cpp  ElectricModelingDLGFather.cpp  ElectricModelingDLGFather.h  ElectricModelingDLGMagnetic.cpp  ElectricModelingDLGMagnetic.h  ElectricModelingDLGMagneticExternal.cpp  ElectricModelingDLGMagnetoelectric.cpp  ElectricModelingDLGMagnetoelectric.h  ElectricModelingDLGMagnetoelectricExternal.cpp  ElectricModelingDLGMagnetoelectricExternal.h  ElectricModelingDLGMoreDielectric.cpp  (+54 more)
PMPMFCVisual/: ReadMe.txt  (+20 more)
(+182 files in other folders)
