cmake_minimum_required( VERSION 2.8 )

PROJECT(PMP)

FIND_PACKAGE(VTK)
IF(NOT VTK_DIR)
  MESSAGE(FATAL_ERROR "Please set VTK_DIR.")
ENDIF(NOT VTK_DIR)
INCLUDE(${VTK_USE_FILE})

ADD_SUBDIRECTORY(PMP)
ADD_SUBDIRECTORY(PMPDemoVersion3.0)
ADD_SUBDIRECTORY(MFCDlgWithTabctrl)
ADD_SUBDIRECTORY(MFCDlgWithTabctrlOPTMatn)
ADD_SUBDIRECTORY(VTKShowBMP)
ADD_SUBDIRECTORY(PMPVisualization)
ADD_SUBDIRECTORY(VTKMFCCreateBMPActors)
ADD_SUBDIRECTORY(PMPMFCVisual)
ADD_SUBDIRECTORY(PMPFileViewer)
ADD_SUBDIRECTORY(PMPCall)
ADD_SUBDIRECTORY(PMPCallConsole)
ADD_SUBDIRECTORY(RECYCLE)
ADD_SUBDIRECTORY(PMPCreateProcess)
ADD_SUBDIRECTORY(MFCTextView)
ADD_SUBDIRECTORY(PMPFileManage)
ADD_SUBDIRECTORY(PMPMyFileViewer)
ADD_SUBDIRECTORY(PMPImageProcess)
ADD_SUBDIRECTORY(PMPCUDABaseVTK)
ADD_SUBDIRECTORY(PMPWindowsClientMFC)




