SET( PROJECT_SRCS

CalculateDlgChild1.cpp
CalculateDlgChild1.h
CalculateDlgChild2.cpp
CalculateDlgChild2.h
CalculateDlgChild3.cpp
CalculateDlgChild3.h
CalculateDlgFather.cpp
CalculateDlgFather.h
ChildFrm.cpp
ChildFrm.h
ClassView.cpp
ClassView.h
CMakeLists.txt
FileView.cpp
FileView.h
MainFrm.cpp
MainFrm.h
OutputWnd.cpp
OutputWnd.h
PropertiesWnd.cpp
PropertiesWnd.h
ReadMe.txt
resource.h
stdafx.cpp
stdafx.h
targetver.h
TestMFCDlgWithTabctrl.cpp
TestMFCDlgWithTabctrl.h
TestMFCDlgWithTabctrl.rc
TestMFCDlgWithTabctrlDoc.cpp
TestMFCDlgWithTabctrlDoc.h
TestMFCDlgWithTabctrlView.cpp
TestMFCDlgWithTabctrlView.h
UserImages.bmp
ViewTree.cpp
ViewTree.h
IsosurfaceDlg.cpp
IsosurfaceDlg.h
PointsColorDlg.cpp
PointsColorDlg.h

bin/spin/input.dat
bin/spin/spinodal01.exe

res/classview.bmp
res/classview_hc.bmp
res/class_view.ico
res/class_view_hc.ico
res/explorer.bmp
res/explorer_hc.bmp
res/fileview.bmp
res/fileview_hc.bmp
res/file_view.ico
res/file_view_hc.ico
res/menuimages.bmp
res/menuimages_hc.bmp
res/output_wnd.ico
res/output_wnd_hc.ico
res/properties.bmp
res/properties_hc.bmp
res/properties_wnd.ico
res/properties_wnd_hc.ico
res/sort.bmp
res/sort_hc.bmp
res/TestMFCDlgWithTabctrl.ico
res/TestMFCDlgWithTabctrl.rc2
res/TestMFCDlgWithTabctrlDoc.ico
res/Toolbar.bmp
res/Toolbar256.bmp
) 

ADD_EXECUTABLE(MFCDlgWithTabctrl WIN32 ${PROJECT_SRCS} )